@@ -16,7 +16,6 @@
 
 import sys,struct
 import tree, gtk, gobject
-import gsf
 import oleparse,mf,svm,cdr,clp
 
 class Page:
@@ -36,65 +35,50 @@ class Page:
 		else:
 			self.pname = self.fname
 		offset = 0
-		src = gsf.InputStdio(self.fname)
-		buf = src.read(12)
+		f = open(self.fname)
+		buf = f.read()
+
 		if buf[0:8] == "\xd0\xcf\x11\xe0\xa1\xb1\x1a\xe1":
-			self.type = oleparse.open(src, self)
+			self.type = oleparse.open(buf, self)
 			return 0
 
 		if buf[0:2] == "\x50\xc3":
 			self.type = "CLP"
-			src.seek(0,1)
-			buf = src.read(src.size())
 			clp.open (buf,self)
 			return 0
 
 		if buf[0:6] == "VCLMTF":
 			self.type = "SVM"
-			src.seek(0,1)
-			buf = src.read(src.size())
 			svm.open (buf,self)
 			return 0
 
 		if buf[0:4] == "RIFF" and buf[8:11] == "CDR":
 			self.type = "CDR%x"%(ord(buf[11])-0x30)
-			src.seek(0,1)
-			buf = src.read(src.size())
 			print 'Probably CDR %x'%(ord(buf[11])-0x30)
 			cdr.cdr_open(buf,self)
 			return 0
 
 		if buf[0:4] == "\xd7\xcd\xc6\x9a":
 			self.type = "APWMF"
-			src.seek(0,1)
-			buf = src.read(src.size())
 			mf.mf_open(buf,self)
 			print "Aldus Placeable WMF"
 			return 0
 
 		if buf[0:6] == "\x01\x00\x09\x00\x00\x03":
 			self.type = "WMF"
-			src.seek(0,1)
-			buf = src.read(src.size())
 			print "Probably WMF"
 			mf.mf_open(buf,self)
 			return 0
 
-		src.seek(28,0)
-		buf = src.read(4)
-		if buf == "\x20\x45\x4d\x46":
+		if buf[40:44] == "\x20\x45\x4d\x46":
 			self.type = "EMF"
 			print "Probably EMF"
-			src.seek(0,1)
-			buf = src.read(src.size())
 			mf.mf_open(buf,self)
 			return 0
-		src.seek(0,1)
-		buf = src.read(src.size())
 		iter1 = self.model.append(None, None)
 		self.model.set_value(iter1, 0, "File")
 		self.model.set_value(iter1, 1, 0)
-		self.model.set_value(iter1, 2, src.size())
+		self.model.set_value(iter1, 2, len(buf))
 		self.model.set_value(iter1, 3, buf)
 		return 0
 
